<resources>
    <string name="app_name" translatable="false">SportyApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Włodzimierz</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_map">Map</string>
    <string name="menu_my_games">My games</string>
    <string name="menu_fields">Playfield around</string>
    <string name="menu_add_game">Add a game</string>
    <string name="menu_history">Game history</string>

    <string name="hint_name">Name</string>
    <string name="hint_duration">duration in minutes</string>
    <string name="hint_time">Date</string>
    <string name="createGame_addPlayer">Add players</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="opinions_title">Opinions</string>
    <string name="last_games_title">Last games</string>
    <string name="opinion_text_test">It was big fun. Mathew was there, as he promised. He also took the ball with himself.</string>
    <string name="opinion_date_test">12.12.2019r. 16:48</string>
    <string name="organiser_title">Organiser</string>
    <string name="event_name_title">Event name</string>
    <string name="event_place_name_title">Event place</string>
    <string name="event_date_test">tue. 12.12.2019r. 16:30</string>
    <string name="user_app_bar_title">User</string>
    <string name="no_local_permission">Without this permission app cannot localize you</string>

    <string name="basketball">Basketball</string>
    <string name="football">Football</string>
    <string name="city">City</string>
    <string name="address">Address:</string>
    <string name="players_number_test">Players: x</string>
    <string name="min_players_number_test">Minimum: y</string>
    <string name="list_of_players">List of players</string>
    <string name="username">Username</string>
    <string name="game_app_bar_title">Game</string>

    <string name="search_prompt">Search for games</string>
    <string name="magnifying_glass">Magnifying glass</string>
    <string name="basketball_ball">Basketball</string>
    <string name="field">Field</string>
    <string name="check_calendar">Check calendar</string>
    <string name="add_game_title">Add game</string>
    <string name="game_name">Name of game:</string>
    <string name="date_of_game">Date:</string>
    <string name="duration_of_game">Duration:</string>
    <string name="players">Players:</string>
    <string name="is_public">Is public?</string>
    <string name="editText_game_name">Name</string>
    <string name="sport_discipline_icon">Sport discipline icon</string>
    <string name="players_taking_part_icon">Players taking part icon</string>
    <string name="time_icon">Time icon</string>
    <string name="event_view_participants" translatable="false">%1$s/%2$s</string>
    <string name="hint_add_start">00:00</string>
    <string name="hint_add_end">00:00</string>
    <string name="hint_add_start_label">Game start</string>
    <string name="hint_add_end_label">Game duration</string>
    <string name="name_required_error">Name is required!</string>
    <string name="name_max_length_error">Name max length is 30!</string>
    <string name="name_content_error">Name can contain only letters and numbers!</string>
    <string name="date_format_error">Provide date in dd.mm.yyyy format.</string>
    <string name="duration_error">Error in game duration.</string>
    <string name="pick_date">Pick a date:</string>
    <string name="max_number_of_players">Maximum number of players:</string>
    <string name="hint_max_players">20</string>
    <string name="max_players_empty_error">Maximum number of players is required.</string>
    <string name="max_players_error">Maximum number of players must be at least 2.</string>
    <string name="event_view_start_time" translatable="false">%1$s:%2$s</string>
    <string name="planned_events">Planned games</string>
    <string name="field_type_icon">Field type icon</string>
    <string name="tennis">Tennis</string>
    <string name="volleyball">Volleyball</string>
    <string name="badminton">Badminton</string>
    <string name="table_tennis">Table tennis</string>
    <string name="handball">Handball</string>
    <string name="gym">Gym</string>
    <string name="address_add_game">Address</string>
    <string name="choose_a_field">Choose a field:</string>
    <string name="field_not_found">Field not found</string>
    <string name="choose_discipline">Choose discipline:</string>
    <string name="discipline">Discipline</string>
    <string name="discipline_error">Discipline is required.</string>
    <string name="no_filter">No filter</string>
</resources>
