<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_my_games"
            android:icon="@drawable/ic_add_circle_outline_gray_24dp"
            android:title="@string/menu_my_games" />
        <item
            android:id="@+id/nav_add_game"
            android:icon="@drawable/ic_add_circle_outline_gray_24dp"
            android:title="@string/menu_add_game" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_add_circle_outline_gray_24dp"
            android:title="@string/menu_history" />
    </group>

    <group
        android:id="@+id/map_menu_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_map_gray_24dp"
            android:title="@string/menu_map" />
    </group>

</menu>
