<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.sportyapp.ui.home.HomeFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_add_game"
            app:destination="@id/nav_add_game" />
    </fragment>

    <fragment
        android:id="@+id/nav_my_games"
        android:name="com.example.sportyapp.ui.myGames.MyGamesFragment"
        android:label="@string/menu_my_games"
        tools:layout="@layout/fragment_my_games">
        <action
            android:id="@+id/action_nav_my_games_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_person"
        android:name="com.example.sportyapp.ui.personInfo.PersonInfoFragment"
        tools:layout="@layout/fragment_person_info">
        <action
            android:id="@+id/action_nav_person_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_fields"
        android:name="com.example.sportyapp.ui.fieldsInArea.FieldsFragment"
        android:label="@string/menu_fields"
        tools:layout="@layout/fragment_fields" />

    <fragment
        android:id="@+id/nav_add_game"
        android:name="com.example.sportyapp.ui.addGame.AddGameFragment"
        android:label="@string/menu_add_game"
        tools:layout="@layout/fragment_add_game">
        <argument
            android:name="fieldID"
            app:argType="long"
            android:defaultValue="0L" />
        <action
            android:id="@+id/action_nav_add_game_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.sportyapp.ui.gameHistory.GameHistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_last_games">
        <action
            android:id="@+id/action_nav_history_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>