<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_field"
    style="@style/CustomBottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    app:behavior_hideable="true"
    app:behavior_peekHeight="444dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/basketball_ball"
                app:srcCompat="@drawable/ic_basketball_svg" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.AppCompat.H5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/basketball" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:paddingTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:paddingStart="13.5dp"
                android:text="@string/address" />

            <TextView
                android:id="@+id/address_text_view"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ostrobramska 10" />
        </LinearLayout>
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>