<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="620dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/add_game_title"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:foregroundGravity="center_vertical|center|center_horizontal"
        android:gravity="center"
        android:text="@string/add_game_title"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/game_name"
            android:textAlignment="viewStart"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText_game_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/editText_game_name"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="93dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/date_of_game"
            android:textAlignment="viewStart"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText_date_of_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="96dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/duration_of_game"
            android:textAlignment="viewStart"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText_game_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="time" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="118dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/players"
            android:textAlignment="viewStart"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText_players"
            android:layout_width="202dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:foregroundGravity="center_vertical|center|center_horizontal"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_add_circle_outline_gray_24dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="137dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/is_public"
            android:textAlignment="center"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkBox_is_public"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="358dp"
        android:layout_height="105dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_weight="1"
        android:foregroundGravity="center_vertical|center|center_horizontal"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/add_game_title" />
</android.widget.LinearLayout>