<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/event_view_date_number"
            style="@style/TextAppearance.MaterialComponents.Headline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="16" />

        <TextView
            android:id="@+id/event_view_date_month"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="lis" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/event_view_event_name"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="Nazwa wydarzenia" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/sport_discipline_icon"
                app:srcCompat="@drawable/ic_basketball_svg" />

            <TextView
                style="@style/InsideGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/basketball" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/time_icon"
                app:srcCompat="@drawable/ic_watch_later_24px" />

            <TextView
                style="@style/InsideGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="16:30" />

            <ImageView
                android:layout_width="18dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/players_taking_part_icon"
                app:srcCompat="@drawable/ic_perm_identity_24px" />

            <TextView
                style="@style/InsideGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="16/45" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>